# pz_test

./: .env.example  .gitignore  README.MD  config.py  foo_recursive.py  misc.py  pyproject.toml
db/: models.py
migrations/: env.py
migrations/versions/: b107a47889da_test_data.py  cb55c7d02aa0_foo_table.py
tests/: test_foo_recursive.py
