[tool.poetry]
name = "pz_test"
version = "0.1.0"
description = ""
authors = ["Daniil Shvedov <dankaprog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
